fix(NavigationDrawer): collapse list when drawer is not expanded

--- a/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
+++ b/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
@@ -56,6 +56,9 @@
   .v-list
     overflow: hidden
 
+  &:not(:hover) .v-list-group__items
+    display: none
+
 .v-navigation-drawer__content
   flex: 0 1 auto
   height: $navigation-drawer-content-height
